[gd_scene load_steps=16 format=2]

[ext_resource path="res://Graphics/circle.png" type="Texture" id=1]
[ext_resource path="res://Graphics/GamePlants/purple_flower40x40.png" type="Texture" id=2]
[ext_resource path="res://MainScene/Main.gd" type="Script" id=3]
[ext_resource path="res://Graphics/spring.png" type="Texture" id=4]
[ext_resource path="res://Graphics/GamePlants/red_berry40x40.png" type="Texture" id=5]
[ext_resource path="res://Graphics/GamePlants/blue_berry40x40.png" type="Texture" id=6]
[ext_resource path="res://Graphics/GamePlants/mint40x40.png" type="Texture" id=7]
[ext_resource path="res://Graphics/blue-berry.png" type="Texture" id=8]
[ext_resource path="res://Graphics/purple-flower.png" type="Texture" id=9]
[ext_resource path="res://HUD.gd" type="Script" id=10]
[ext_resource path="res://Graphics/spring_icon.png" type="Texture" id=11]
[ext_resource path="res://Graphics/heart.png" type="Texture" id=12]
[ext_resource path="res://Graphics/GamePlants/blue_flower40x40.png" type="Texture" id=13]
[ext_resource path="res://Graphics/GamePlants/yellow_flower40x40.png" type="Texture" id=14]

[sub_resource type="TileSet" id=1]
0/name = "blue_berry40x40.png 0"
0/texture = ExtResource( 6 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 40, 40 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 40, 40 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "blue_flower40x40.png 1"
1/texture = ExtResource( 13 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 40, 40 )
1/tile_mode = 2
1/autotile/icon_coordinate = Vector2( 0, 0 )
1/autotile/tile_size = Vector2( 40, 40 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "mint40x40.png 2"
2/texture = ExtResource( 7 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 40, 40 )
2/tile_mode = 2
2/autotile/icon_coordinate = Vector2( 0, 0 )
2/autotile/tile_size = Vector2( 40, 40 )
2/autotile/spacing = 0
2/autotile/occluder_map = [  ]
2/autotile/navpoly_map = [  ]
2/autotile/priority_map = [  ]
2/autotile/z_index_map = [  ]
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "purple_flower40x40.png 3"
3/texture = ExtResource( 2 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 40, 40 )
3/tile_mode = 2
3/autotile/icon_coordinate = Vector2( 0, 0 )
3/autotile/tile_size = Vector2( 40, 40 )
3/autotile/spacing = 0
3/autotile/occluder_map = [  ]
3/autotile/navpoly_map = [  ]
3/autotile/priority_map = [  ]
3/autotile/z_index_map = [  ]
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "red_berry40x40.png 4"
4/texture = ExtResource( 5 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 40, 40 )
4/tile_mode = 2
4/autotile/icon_coordinate = Vector2( 0, 0 )
4/autotile/tile_size = Vector2( 40, 40 )
4/autotile/spacing = 0
4/autotile/occluder_map = [  ]
4/autotile/navpoly_map = [  ]
4/autotile/priority_map = [  ]
4/autotile/z_index_map = [  ]
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "yellow_flower40x40.png 5"
5/texture = ExtResource( 14 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 0, 40, 40 )
5/tile_mode = 2
5/autotile/icon_coordinate = Vector2( 0, 0 )
5/autotile/tile_size = Vector2( 40, 40 )
5/autotile/spacing = 0
5/autotile/occluder_map = [  ]
5/autotile/navpoly_map = [  ]
5/autotile/priority_map = [  ]
5/autotile/z_index_map = [  ]
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "circle.png 6"
6/texture = ExtResource( 1 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 0, 40, 40 )
6/tile_mode = 2
6/autotile/icon_coordinate = Vector2( 0, 0 )
6/autotile/tile_size = Vector2( 40, 40 )
6/autotile/spacing = 0
6/autotile/occluder_map = [  ]
6/autotile/navpoly_map = [  ]
6/autotile/priority_map = [  ]
6/autotile/z_index_map = [  ]
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0

[node name="Main" type="Node2D"]
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1202.0
margin_bottom = 798.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SlimePlant" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 40, 40 )
cell_custom_transform = Transform2D( 65, 0, 0, 65, 0, 0 )
format = 1

[node name="SlimeTick" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 10 )

[node name="TimeBox" type="MarginContainer" parent="HUD"]
anchor_left = 0.848
anchor_right = 1.008
anchor_bottom = 0.545
margin_left = 16.1709
margin_top = 36.6216
margin_right = -33.3491
margin_bottom = -325.378
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Node" parent="HUD"]

[node name="ScoreText" type="Label" parent="HUD/Score"]
margin_left = 1236.3
margin_top = 252.181
margin_right = 1289.3
margin_bottom = 276.181
text = "Score:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="HUD/Score"]
margin_left = 1310.8
margin_top = 252.536
margin_right = 1354.8
margin_bottom = 276.536
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="Node" parent="HUD"]

[node name="Sprite1" type="Sprite" parent="HUD/Health"]
position = Vector2( 1252.58, 317.28 )
scale = Vector2( 0.101599, 0.0969692 )
texture = ExtResource( 12 )

[node name="Sprite2" type="Sprite" parent="HUD/Health"]
position = Vector2( 1312.23, 317.125 )
scale = Vector2( 0.101599, 0.0969692 )
texture = ExtResource( 12 )

[node name="Sprite3" type="Sprite" parent="HUD/Health"]
position = Vector2( 1372.49, 317.125 )
scale = Vector2( 0.101599, 0.0969692 )
texture = ExtResource( 12 )

[node name="Season" type="Node" parent="HUD"]

[node name="SeasonalPlants" type="Label" parent="HUD/Season"]
margin_left = 1247.98
margin_top = 367.0
margin_right = 1392.98
margin_bottom = 390.0
text = "Harvest these plants:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SeasonSprite1" type="Sprite" parent="HUD/Season"]
position = Vector2( 1320.9, 440.5 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 8 )

[node name="SeasonSprite2" type="Sprite" parent="HUD/Season"]
position = Vector2( 1320.9, 535.5 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 9 )

[node name="SeasonSprite3" type="Sprite" parent="HUD/Season"]
position = Vector2( 1313.7, 120.321 )
scale = Vector2( 0.387063, 0.393612 )
texture = ExtResource( 11 )

[connection signal="timeout" from="SlimeTick" to="." method="_on_SlimeTick_timeout"]
